--- a/app/src/main/res/layout/activity_lawyer_signup.xml
+++ b/app/src/main/res/layout/activity_lawyer_signup.xml
@@ -200,7 +200,8 @@
                 android:layout_gravity="center"
                 android:layout_marginTop="40dp"
                 android:textColor="@color/black"
-                android:text="@string/lawyer_register" />
+                android:text="@string/lawyer_register"
+                android:background="@drawable/button"/>
 
         </LinearLayout>
     </ScrollView>
